# adk-in-depth

./: .gitignore  pyproject.toml
1-basic-agent/greeting_agent/: agent.py
10-sequential-agent/lead_qualification_agent/subagents/recommender/: agent.py
10-sequential-agent/lead_qualification_agent/subagents/scorer/: agent.py
10-sequential-agent/lead_qualification_agent/subagents/validator/: agent.py
11-parallel-agent/system_monitor_agent/: agent.py
11-parallel-agent/system_monitor_agent/subagents/cpu_info_agent/: agent.py
11-parallel-agent/system_monitor_agent/subagents/disk_info_agent/: agent.py
11-parallel-agent/system_monitor_agent/subagents/memory_info_agent/: agent.py
11-parallel-agent/system_monitor_agent/subagents/synthesizer_agent/: agent.py
12-loop-agent/linkedin_post_agent/subagents/post_generator/: agent.py
12-loop-agent/linkedin_post_agent/subagents/post_refiner/: agent.py
12-loop-agent/linkedin_post_agent/subagents/post_reviewer/: agent.py
2-tool-agent/tool_agent/: agent.py
3-litellm-agent/dad_joke_agent/: agent.py
4-structured-outputs/email_agent/: agent.py
5-sessions-and-state/: basic_stateful_session.py
5-sessions-and-state/question_answering_agent/: agent.py
6-persistent-storage/: main.py
6-persistent-storage/memory_agent/: agent.py
7-multi-agent/manager/: agent.py
8-stateful-multi-agent/: main.py
8-stateful-multi-agent/customer_service_agent/: agent.py
9-callbacks/before_after_agent/: agent.py
9-callbacks/before_after_model/: agent.py
9-callbacks/before_after_tool/: agent.py
(+7 files in other folders)
